tests/input/function-errors.txt
Category = "Reference"; Secret = 0
Places = 4; StripZeros = 1
Format = "float"; GroupDigits = 0; DegreesMode = 0; ShadowConstants = 0
"Functions"
good(x) = x + 1
bad(x) = x +
~~~~~~~~~~~~~~~~~~~~~~~~~~~
Category = "Unfiled"; Secret = 0
Places = 4; StripZeros = 1
Format = "float"; GroupDigits = 0; DegreesMode = 0; ShadowConstants = 0
"Test 1: Reference function parse error shows in status"

a: good(2)
a->
~~~~~~~~~~~~~~~~~~~~~~~~~~~
Category = "Unfiled"; Secret = 0
Places = 4; StripZeros = 1
Format = "float"; GroupDigits = 0; DegreesMode = 0; ShadowConstants = 0
"Test 2: Local function parse error shows in status"

badfn(x) = x *
a: 3
a->
~~~~~~~~~~~~~~~~~~~~~~~~~~~
Category = "Unfiled"; Secret = 0
Places = 4; StripZeros = 1
Format = "float"; GroupDigits = 0; DegreesMode = 0; ShadowConstants = 0
"Test 3: Good reference function still works despite bad one"

a: good(5)
a->
~~~~~~~~~~~~~~~~~~~~~~~~~~~
